Delete duplicate fractal

--- a/fractals/index.html
+++ b/fractals/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="column">
           <img id="hypercomplex-iii" class="myImages" src="../thumbnails/8.jpeg" alt="<i>Hypercomplex Mandelbulb fractals III</i>, Softology's Visions of Chaos" data-src="../images/8.jpeg" loading="lazy">
-          <img id="hypercomplex-iv" class="myImages" src="../thumbnails/8.jpeg" alt="<i>Hypercomplex Mandelbulb fractals IV</i>, Softology's Visions of Chaos" data-src="../images/8.jpeg" loading="lazy">
+          <img id="hypercomplex-iv" class="myImages" src="../thumbnails/23.jpg" alt="<i>Hypercomplex Mandelbulb fractals IV</i>, Softology's Visions of Chaos" data-src="../images/23.jpg" loading="lazy">
         </div>
         <div class="column">
           <img id="hypercomplex-v" class="myImages" src="../thumbnails/24.jpg" alt="<i>Hypercomplex Mandelbulb fractals V</i>, Softology's Visions of Chaos" data-src="../images/24.jpg" loading="lazy">
