Edit website to be chronological order + remove nav bar

--- a/gouache-and-watercolor/index.html
+++ b/gouache-and-watercolor/index.html
@@ -41,19 +41,8 @@
     </ul>
   </header>
   <body>
-    <div class="navigation">
-        <ul class="links">
-          <li><a href="/art">Home</a></li>
-          <li><a href="/art/about">About</a></li>
-          <li><a href="/art/fractals">Fractals</a></li>
-          <li><a class ="highlighted" href="/art/gouache-and-watercolor">Gouache and Watercolor</a></li>
-          <li><a href="/art/faces-collection">The Faces Collection</a></li>
-          <p class="nav-header">Archives</p>
-          <li><a href="/art/2021-archive">2021</a></li>
-          <li><a href="/art/2020-archive">2020</a></li>
-        </ul>
-    </div>
     <div class="wrapper">
+      <a href="../">← back to home</a>
       <h1>gouache and watercolor</h1>
       <p style="text-indent: 25px;">
       </p>
