Fix spelling typo

--- a/2020-archive/index.html
+++ b/2020-archive/index.html
@@ -53,7 +53,7 @@
       <div class="row">
         <div class="column">
           <img id="in-our-hands" class="myImages" src="../thumbnails/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas" data-src="../images/0.jpeg" loading="lazy">
-          <img id="whiteboard" class="myImages" src="../thumbnails/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard" data-src="../images/18.jpg" loading="lazy">
+          <img id="whiteboard" class="myImages" src="../thumbnails/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whiteboard" data-src="../images/18.jpg" loading="lazy">
           <img id="aspire" class="myImages" src="../thumbnails/4.jpeg" alt="<i>aspire</i>, Oil on canvas" data-src="../images/4.jpeg" loading="lazy">
           <img id="hypercomplex-iii" class="myImages" src="../thumbnails/8.jpeg" alt="<i>Hypercomplex Mandelbulb fractals III</i>, Softology's Visions of Chaos" data-src="../images/8.jpeg" loading="lazy">
         </div>
