--- a/faces-collection/index.html
+++ b/faces-collection/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="column">
           <img id="faces-ii" class="myImages" src="../thumbnails/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper" data-src="../images/16.jpg" loading="lazy">
-          <img id="whiteboard" class="myImages" src="../thumbnails/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard" data-src="../images/18.jpg" loading="lazy">
+          <img id="whiteboard" class="myImages" src="../thumbnails/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whiteboard" data-src="../images/18.jpg" loading="lazy">
         </div>
         <div class="column">
           <img id="self-portrait-ii" class="myImages" src="../thumbnails/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper" data-src="../images/11.jpg" loading="lazy">
