Update meta description

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 
     <meta property="og:title" content="my art | sophie zhang" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description" content="my art" />
+    <meta name="description" content="Sophie Zhang | Oil painter / Artist / Digital Content Creator - Posts with images of my art; occasionally featuring my thoughts" />
     <meta property="og:description" content="Paintings, sketches, and more by Sophie Zhang" />
     <link rel="canonical" href="https://sophiezhng.github.io/art/" />
     <meta property="og:url" content="https://sophiezhng.github.io/art/" />
     <meta property="og:site_name" content="my art | sophie zhang" />
     <meta name="twitter:card" content="Paintings, sketches, and more by Sophie Zhang" />
     <meta property="twitter:title" content="my art | sophie zhang" />
+    <meta name="keywords" content="artist, art, oil painting, sketches, sophie zhang youtube, gouache">
+    <meta name="author" content="Sophie Zhang">
 
     <title>my art | sophie zhang</title>
     
