--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
       <br>
       <h2>Posts</h2>
       <ul class="links">
-        <li>2021-05-31 :: <a class="highlighted" href="/art/2021-archive">2021 art archive</a></li>
-        <li>2021-05-02 :: <a href="/art/faces-collection">The Faces Collection</a></li>
-        <li>2020-12-31 :: <a href="/art/2020-archive">2020 art archive</a></li>
-        <li>2020-12-08 :: <a href="/art/gouache-and-watercolor">Gouache and Watercolor</a></li>
-        <li>2020-06-21 :: <a href="/art/fractals">Fractals</a></li>
+        <li>2021-05-31 :: <a class="highlighted" href="2021-archive">2021 art archive</a></li>
+        <li>2021-05-02 :: <a href="faces-collection">The Faces Collection</a></li>
+        <li>2020-12-31 :: <a href="2020-archive">2020 art archive</a></li>
+        <li>2020-12-08 :: <a href="gouache-and-watercolor">Gouache and Watercolor</a></li>
+        <li>2020-06-21 :: <a href="fractals">Fractals</a></li>
       </ul>
       <h2>About</h2>
       <p style="text-indent: 25px;"> I am an artist from the Greater Toronto Area in Canada, who is interested in oil painting, gouache, 
