--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <p>Coded in HTML, CSS, and Javascript</p><br>
       <section class="form-section">
         <h2>Contact</h2>
-        <form action="mailto:sophiezhang.jpg@gmail.com?subject=Art site contact form" method="post" class="contact-form" enctype="text/plain">
+        <form action="mailto:sophiezhang.jpg@gmail.com?subject=Art site contact form" method="post" class="contact-form" autocomplete="off" enctype="text/plain">
           <p>Name</p>
           <input type="text" name="name" required>
           <p>Email</p>
