--- a/index.html
+++ b/index.html
@@ -100,19 +100,7 @@
         <li><a href="https://github.com/sophiezhng" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
         </a></li>
       </ul>
-      <p>Coded in HTML, CSS, and Javascript</p><br>
-      <section class="form-section">
-        <h2>Contact</h2>
-        <form action="mailto:sophiezhang.jpg@gmail.com?subject=Art site contact form" method="post" class="contact-form" autocomplete="off" enctype=”multipart/form-data”>
-          <p>Name</p>
-          <input type="text" name="name" required>
-          <p>Email</p>
-          <input type="text" name="mail" required>
-          <p>Your Message</p>
-          <textarea id="Message" name="Message" rows="6" maxlength="3000" required></textarea>
-          <input type="submit" value="Send" class="btn-15 custom-btn">
-        </form>
-      </section>
+      <p>Coded in HTML, CSS, and Javascript</p>
       <footer>
         <p>© 2020-2021 Sophie Zhang
           <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
