Edit description fo 2021 and size of thumbnail

--- a/2021-archive/index.html
+++ b/2021-archive/index.html
@@ -46,7 +46,7 @@
       <h1 style="margin-bottom: 0px;">2021</h1>
       <p style="margin-top: 0px; font-size: small;">[archive]</p>
       <p style="text-indent: 25px;">
-        Still in progress.
+        A work in progress.
       </p>
       <div class="row">
         <div class="column">
