--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@
       <div id="caption"></div>
     </div>
     <script src="js/script.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
