Update style (font and colors on home page)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet"
       href='https://fonts.googleapis.com/css?family=Roboto'>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5L3E8JK9TV"></script>
     <script>
@@ -53,13 +53,13 @@
   </header>
   <body>
     <div class="wrapper">
-      <ul id="title-list">
-        <li><h1 id="my-art" style="display: inline;">
+      <ul id="title-list" style="margin-bottom: 0px;">
+        <li><h1 id="my-art" style="display: inline; font-family: 'Josefin Sans', sans-serif;">
           my art | sophie zhang</h1></li>
         <li><a href="index.xml" class="logo"><svg style="padding-top: 6px;" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg>
         </a></li>
       </ul>
-      <p>
+      <p style="display: inline;">
         Some of the pieces I have made over the years.
       </p>
       <h2>Recent</h2>
@@ -100,7 +100,7 @@
         <li><a href="https://github.com/sophiezhng" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
         </a></li>
       </ul>
-      <p>Coded in HTML, CSS, and Javascript</p>
+      <p>Coded in HTML, CSS, and Javascript<br>Contact me: <a href="mailto:sophiezhang.jpg@gmail.com">sophiezhang.jpg@gmail.com</a></p>
       <footer>
         <p>© 2020-2021 Sophie Zhang
           <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
