Update field name

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <p>Name</p>
           <input type="text" name="name" required>
           <p>Email</p>
-          <input type="email" name="_replyto" required>
+          <input type="email" name="mail" required>
           <p>Your Message</p>
           <textarea id="Message" name="Message" rows="6" maxlength="3000" required></textarea>
           <input type="submit" value="Send" class="btn-15 custom-btn">
