Shorten contact form

--- a/index.html
+++ b/index.html
@@ -104,12 +104,9 @@
       <section class="form-section">
         <h2>Contact</h2>
         <form action="https://formspree.io/f/xayaoveq" method="POST" class="contact-form">
-          <p>Name</p>
-          <input type="text" name="name" required>
-          <p>Email</p>
-          <input type="email" name="mail" required>
-          <p>Your Message</p>
-          <textarea id="Message" name="Message" rows="6" maxlength="3000" required></textarea>
+          <input type="text" name="name" placeholder="Name" required>
+          <input type="email" name="mail" placeholder="Email" required>
+          <textarea id="Message" name="Message" rows="6" maxlength="3000" placeholder="Your Message" required></textarea>
           <input type="submit" value="Send" class="btn-15 custom-btn">
         </form>
       </section>
