--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon - Generic -->
-    <link rel="icon" href="/art/images/1.jpeg" type="image/jpeg">
+    <link rel="icon" href="/images/1.jpeg" type="image/jpeg">
     <!-- Favicon - Chrome/Android -->
-    <link rel="shortcut icon" href="/art/images/1.jpeg" type="image/jpeg">
+    <link rel="shortcut icon" href="/images/1.jpeg" type="image/jpeg">
     <!-- Favicon - Safari/iOS -->
-    <link rel="apple-touch-icon" href="/art/images/1.jpeg">
+    <link rel="apple-touch-icon" href="/images/1.jpeg">
 
     <meta property="og:title" content="my art | sophie zhang" />
     <meta property="og:locale" content="en_US" />
@@ -49,6 +49,6 @@
     bottom:0;">
       <p>© 2020-2021 Sophie Zhang</p>
     </footer>
-    <script src="/art/js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
