--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 
     <title>my art | sophie zhang</title>
     
-    <link rel="stylesheet" href="/art/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet"
       href='https://fonts.googleapis.com/css?family=Roboto'>
