--- a/art/index.html
+++ b/art/index.html
@@ -12,18 +12,19 @@
     <!-- Favicon - Safari/iOS -->
     <link rel="apple-touch-icon" href="images/1.jpeg">
 
-    <meta property="og:title" content="Sophie Zhang" />
+    <meta property="og:title" content="my art | sophie zhang" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Sophie Zhang | Oil painter / Artist / Digital Content Creator - Posts with images of my art; occasionally featuring my thoughts" />
-    <meta property="og:description" content="Projects, paintings, blog posts and more by Sophie Zhang" />
+    <meta property="og:description" content="Paintings, sketches, and more by Sophie Zhang" />
     <link rel="canonical" href="https://sophiezhng.github.io/art/" />
     <meta property="og:url" content="https://sophiezhng.github.io/art/" />
-    <meta property="og:site_name" content="Sophie Zhang" />
+    <meta property="og:site_name" content="my art | sophie zhang" />
     <meta name="twitter:card" content="Paintings, sketches, and more by Sophie Zhang" />
-    <meta property="twitter:title" content="Sophie Zhang" />
+    <meta property="twitter:title" content="my art | sophie zhang" />
+    <meta name="keywords" content="artist, art, oil painting, sketches, sophie zhang youtube, gouache">
     <meta name="author" content="Sophie Zhang">
 
-    <title>Sophie Zhang</title>
+    <title>my art | sophie zhang</title>
     
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -47,34 +48,68 @@
   </label>
     <ul class="right">
       <li><a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a></li>
-      <li><a href="https://www.instagram.com/sophi3.exe/">Instagram</a></li>
+      <li><a href="https://instagram.com/thatartfriend">Instagram</a></li>
     </ul>
   </header>
   <body>
     <div class="wrapper">
-        <h1 id="my-art" style="display: inline; font-family: 'Josefin Sans', sans-serif;">
-          Sophie Zhang</h1>
-      <br>
-      <img src="images/profile.jpg" style="display:block; margin:auto; width: 200px; height: 200px; border-radius: 50%;"></img>
-      <ul class="links">
-        <li><a href="art">Art</a>
-        </a></li>
-        <li><a href="blog">Blog</a>
+      <ul id="title-list" style="margin-bottom: 0px;">
+        <li><h1 id="my-art" style="display: inline; font-family: 'Josefin Sans', sans-serif;">
+          my art | sophie zhang</h1></li>
+        <li><a href="index.xml" class="logo"><svg style="padding-top: 6px;" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg>
         </a></li>
       </ul>
-      <h2>About</h2>
-      <p style="text-indent: 25px;"> Hi there, I’m Sophie! I am a Canadian high school student who’s passionate about computer science, community service, and bettering the world through technology.
+      <p style="display: inline;">
+        Some of the pieces I have made over the years.
       </p>
+      <h2>Recent</h2>
+      <div class="row">
+        <div class="column">
+          <img id="delicate" class="myImages" src="thumbnails/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" data-src="images/20.jpg" loading="lazy">
+        </div>
+        <div class="column">
+          <img id="in-our-hands" class="myImages" src="thumbnails/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas" data-src="images/0.jpeg" loading="lazy">
+        </div>
+        <div class="column">
+          <img id="self-portrait" class="myImages" src="thumbnails/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" data-src="images/9.jpg" loading="lazy">
+        </div>
+        <div class="column">
+          <img id="fruit-basket" class="myImages" src="thumbnails/19.jpg" alt="<i>october fruit basket</i>, 2020, Gouache on paper" data-src="images/19.jpg" loading="lazy">
+        </div>
+      </div>
+      <br>
+      <h2>Collections</h2>
+      <ul class="links">
+        <li><a class="highlighted" href="2021-archive">2021 art archive</a></li>
+        <li><a href="faces-collection">The Faces Collection</a></li>
+        <li><a href="2020-archive">2020 art archive</a></li>
+        <li><a href="gouache-and-watercolor">Gouache and Watercolor</a></li>
+        <li><a href="fractals">Fractals</a></li>
+      </ul>
+      <h2>About</h2>
+      <p style="text-indent: 25px;"> I am an artist from the Greater Toronto Area in Canada, who is interested in oil painting, gouache, 
+        portraits, sketching, and coding. Feel free to subscribe to 
+        my <a href="index.xml">RSS feed</a> to get updated when I post new art on this page!</p>
       <ul id="socials">
         <li><a href="index.xml" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg>
         </a></li>
         <li><a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
         </a></li>
-        <li><a href="https://www.instagram.com/sophi3.exe/" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+        <li><a href="https://instagram.com/thatartfriend" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
         </a></li>
         <li><a href="https://github.com/sophiezhng" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
         </a></li>
       </ul>
+      <p>Coded in HTML, CSS, and Javascript</p>
+      <section class="form-section">
+        <h2>Contact</h2>
+        <form action="https://formspree.io/f/xayaoveq" method="POST" class="contact-form">
+          <input type="text" name="name" placeholder="Name" required>
+          <input type="email" name="mail" placeholder="Email" required>
+          <textarea id="Message" name="Message" rows="6" maxlength="3000" placeholder="Your Message" required></textarea>
+          <input type="submit" value="Send" class="btn-15 custom-btn">
+        </form>
+      </section>
       <footer>
         <p>© 2020-2021 Sophie Zhang
           <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
