--- a/art/index.html
+++ b/art/index.html
@@ -42,6 +42,7 @@
     </script>
   </head>
   <header>
+    <a href="/" accesskey="h" title="Sophie Zhang (Alt + H)" class="title">Sophie Zhang</a>
     <label id="switch" class="switch">
       <input type="checkbox" onchange="toggleTheme()" id="slider">
       <span class="slider round"></span>
