--- a/art/faces-collection/index.html
+++ b/art/faces-collection/index.html
@@ -31,6 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   </head>
   <header>
+    <a href="/" accesskey="h" title="Sophie Zhang (Alt + H)" class="title">Sophie Zhang</a>
     <label id="switch" class="switch">
       <input type="checkbox" onchange="toggleTheme()" id="slider">
       <span class="slider round"></span>
