--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </label>
     <ul class="right">
       <li><a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a></li>
-      <li><a href="https://www.instagram.com/sophi3.exe/">Instagram</a></li>
+      <li><a href="https://www.instagram.com/sophiezh4ng/">Instagram</a></li>
     </ul>
   </header>
   <body>
