--- a/art/2021-archive/index.html
+++ b/art/2021-archive/index.html
@@ -47,31 +47,32 @@
       <h1 style="margin-bottom: 0px;">2021</h1>
       <p style="margin-top: 0px; font-size: small;">[archive]</p>
       <p style="text-indent: 25px;">
-        A work in progress.
+        I had less time this year to do art with university applications and gtradually more difficult school work. Nonetheless, here is my art from the year 2021. 
+        Here's to a better 2022 year!
       </p>
       <div class="row">
         <div class="column">
           <img id="self-portrait" class="myImages" src="../thumbnails/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" data-src="../images/9.jpg" loading="lazy">
           <img id="delicate" class="myImages" src="../thumbnails/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" data-src="../images/20.jpg" loading="lazy">
           <img id="watrwise" class="myImages" src="../thumbnails/26.png" alt="<i>WatrWise</i>, 2021, Digital illustration" data-src="../images/26.png" loading="lazy">
-          <img id="thirsty" class="myImages" src="../thumbnails/30.png" alt="<i>Thirsty</i>, 2021, Digital illustration" data-src="../images/30.png" loading="lazy">
+          <img id="thirsty" class="myImages" src="../thumbnails/30.png" alt="<i>Thirsty</i>, 2021, Digital illustration" data-src="../images/30.png" loading="lazy" style=" background-color: #a0bceb;">
         </div>
         <div class="column">
           <img id="online-school" class="myImages" src="../thumbnails/10.jpg" alt="<i>online school</i>, 2021, Graphite on paper" data-src="../images/10.jpg" loading="lazy">
           <img id="faces-ii" class="myImages" src="../thumbnails/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper" data-src="../images/16.jpg" loading="lazy">
-          <img id="scuba-diving" class="myImages" src="../thumbnails/28.png" alt="<i>Scuba Mask</i>, 2021, Digital illustration" data-src="../images/28.png" loading="lazy">
-          <img id="v-a-museum" class="myImages" src="../thumbnails/31.jpg" alt="<i>V&A Museum in London</i>, 2021, Digital illustration" data-src="../images/31.jpg" loading="lazy">
+          <img id="scuba-diving" class="myImages" src="../thumbnails/28.png" alt="<i>Scuba Mask</i>, 2021, Digital illustration" data-src="../images/28.png" loading="lazy" style=" background-color: #a0bceb;">
+          <img id="v-a-museum" class="myImages" src="../thumbnails/31.jpg" alt="<i>V&A Museum in London</i>, 2021, Watercolor on paper" data-src="../images/31.jpg" loading="lazy" >
         </div>
         <div class="column">
           <img id="self-portrait-ii" class="myImages" src="../thumbnails/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper" data-src="../images/11.jpg" loading="lazy">
           <img id="faces-iii" class="myImages" src="../thumbnails/17.jpg" alt="<i>faces III</i>, 2021, Graphite on paper" data-src="../images/17.jpg" loading="lazy">
-          <img id="portrait-of-girl" class="myImages" src="../thumbnails/27.png" alt="<i>Portrait of girl</i>, 2021, Digital illustration" data-src="../images/27.png" loading="lazy">
-          <img id="tobermory" class="myImages" src="../thumbnails/32.jpg" alt="<i>Tobermory</i>, 2021, Digital illustration" data-src="../images/32.jpg" loading="lazy">
+          <img id="portrait-of-girl" class="myImages" src="../thumbnails/27.png" alt="<i>Portrait of girl</i>, 2021, Digital illustration" data-src="../images/27.png" loading="lazy" style=" background-color: #a0bceb;">
+          <img id="tobermory" class="myImages" src="../thumbnails/32.jpg" alt="<i>Tobermory</i>, 2021, Watercolor on paper" data-src="../images/32.jpg" loading="lazy">
         </div>
         <div class="column">
           <img id="relaxed" class="myImages" src="../thumbnails/14.jpg" alt="<i>relaxed</i>, 2021, Watercolor and graphite on paper" data-src="../images/14.jpg" loading="lazy">
           <img id="pastel-girl" class="myImages" src="../thumbnails/21.jpg" alt="<i>PASTEL GIRL</i>, 2021, Watercolor and graphite on paper" data-src="../images/21.jpg" loading="lazy">
-          <img id="yeehaw" class="myImages" src="../thumbnails/29.png" alt="<i>Yeehaw</i>, 2021, Digital illustration" data-src="../images/29.png" loading="lazy">
+          <img id="yeehaw" class="myImages" src="../thumbnails/29.png" alt="<i>Yeehaw</i>, 2021, Digital illustration" data-src="../images/29.png" loading="lazy" style=" background-color: #a0bceb;">
         </div>
       </div>
       <footer>
