Delete highlight on 2021 archive

--- a/art/index.html
+++ b/art/index.html
@@ -81,7 +81,7 @@
       <br>
       <h2>Collections</h2>
       <ul class="links">
-        <li><a class="highlighted" href="2021-archive">2021 art archive</a></li>
+        <li><a href="2021-archive">2021 art archive</a></li>
         <li><a href="faces-collection">The Faces Collection</a></li>
         <li><a href="2020-archive">2020 art archive</a></li>
         <li><a href="gouache-and-watercolor">Gouache and Watercolor</a></li>
