--- a/art/2021-archive/index.html
+++ b/art/2021-archive/index.html
@@ -47,7 +47,7 @@
       <h1 style="margin-bottom: 0px;">2021</h1>
       <p style="margin-top: 0px; font-size: small;">[archive]</p>
       <p style="text-indent: 25px;">
-        I had less time this year to do art with university applications and gtradually more difficult school work. Nonetheless, here is my art from the year 2021. 
+        I had less time this year to do art with university applications and gradually more difficult school work. Nonetheless, here is my art from the year 2021. 
         Here's to a better 2022 year!
       </p>
       <div class="row">
