--- a/to-do/index.html
+++ b/to-do/index.html
@@ -4,13 +4,11 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-		
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css" >
-		<link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-		<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+		<link href="css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+		<script src="js/jquery-1.12.4.min.js"></script>
+		<script src="js/jquery.cookie.min.js"></script>
 		<script src="js/script.js"></script>
     <title>To-Do List</title>
 </head>
