Heart bullet points

--- a/to-do/index.html
+++ b/to-do/index.html
@@ -10,21 +10,21 @@
 		<script src="js/jquery-1.12.4.min.js"></script>
 		<script src="js/jquery.cookie.min.js"></script>
 		<script src="js/script.js"></script>
-    <title>To-Do List</title>
+    <title>To-Do List | sophie</title>
 </head>
 	<body>
 <div class="jquery-script-clear"></div>
 </div>
 </div>
 		<div class="container">
-		<span class="panel-title text-center"><b>To-Do List</b></span>
+		<span class="panel-title text-center"><b>to-do list</b></span>
 			<div id="list" class="panel panel-default">
 				<div id="title" class="panel-heading">
 					<h1 class="panel-title text-center">&nbsp;</h1>
 				</div>
 				<div id="input" class="panel-body">
 					<div class="input-group">
-						<input name="add-to-list" type="text" class="form-control" placeholder="add item..." />
+						<input name="add-to-list" type="text" class="form-control" placeholder="add item" />
 						<span class="input-group-btn"><button id="add" class="btn btn-primary">add!</button></span>
 					</div>
 					<br />
